Sun Sep 10 09:20:18 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Utils/XML_Helper.cpp
        * tools/Config_Handlers/Utils/XML_Helper.h
        
          Removed workaround from previous commit, as Ossama Othman has
          provided the proper fix in the G++ macros.

Fri Sep  8 00:28:27 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Utils/XML_Helper.cpp
        * tools/Config_Handlers/Utils/XML_Helper.h
        
          Made the export declaration on the singleton typedef
          contingent on a Microsoft compiler, as the GCC included
          with FC5 was not defining the symbol as a result.

Fri Sep  1 03:09:38 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * docs\tutorials\CoSMIC\index.html
        * docs\tutorials\CoSMIC\01.html
        
        Updated index.html to change the cosmic version.Updated 01.html
        to reflect recent changes of idl_to_picml. Thanks to Sowayan Abdullah
        from LMCO for his help in improving the cosmic documentations.

Thu Aug 31 22:45:09 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager.mpc
          Modified this file to include $(CIAO_ROOT)/tools/Config_Handlers
          in the RMAdmin project.  

Wed Aug 30 17:16:18 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * tools/Config_Handlers/Package_Handlers/Package_Handlers.mpc
          Added more changes to this file to fix the "reference to
          ACE_Singleton<CIAO::Config_Handlers::XML_Helper, ACE_Null_Mutex>
          ::instance()'"warnings with FC5_Static build.

Tue Aug 29 23:08:20 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * tools/Config_Handlers/Package_Handlers/Package_Handlers.mpc
          Fixed the "reference to `ACE_Singleton<CIAO::Config_Handlers
          ::XML_Helper, ACE_Null_Mutex>::instance()'"warnings with
          FC5_Static build.
          