@@ -1,3 +1,11 @@
+Fri Sep 15 21:28:47 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
+        * ciao/Deployment_Core.idl
+        
+          Removed the unnecessary event type definition for RTEC since
+          they are no longer used.
+
 Sun Sep 10 09:20:18 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tools/Config_Handlers/Utils/XML_Helper.cpp
